--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Webrecorder ArchiveWeb.page",
-  "description": "Create high-fidelity web archives directly in your browser",
+  "name": "gnostr-nodegit",
+  "description": "agregore nodegit extension",
   "version": "0.10.0",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
@@ -28,7 +28,7 @@
     "default_icon": {
       "32": "icon.png"
     },
-    "default_title": "Webrecorder ArchiveWeb.page",
+    "default_title": "nodegit",
     "default_popup": "popup.html"
   },
   "web_accessible_resources": [
